# autoTest

./: README.md
common/sched/: CMakeLists.txt  config.h  sched.c  semaphore.c  thread_id.s
communication/dm/hal/modem/: CMakeLists.txt  dm_interface.c
communication/dm/hal/modem/dm/: CMakeLists.txt
communication/dm/hal/modem/dm/inc/: aes.h  dm_register.h  httpclient_sys.h  libhttpclient.h
communication/dm/hal/modem/dm/src/: aes.c  cJSON.c  cmcc_dm.c  dm_base64.c  dm_main.c  telecom_dm.c  unicom_dm.c
tool/: Lindent  autobuild_all.py  bootrom_converter.py  c_translate_cmm.py  fancy.xlsx  ftp_put  indent  pretty_tuning.py  readme  rpc_client.py  rpc_server.py
tool/aquilac_ddr/: readme.txt
tool/aquilac_ddr_current/: sdl2_1600_100.pak  sdl2_2667_080.pak  sdl2_400_090.pak  sdl3_1600_085.pak  sdl3_1600_090.pak  sdl3_2667_095.pak  sdl3_400_085.pak  sdl3_400_090.pak  ~build.result
tool/autoCode/: clean.sh  clock_parse_excel.py  clock_parse_main.py  main.py  reg_verify.py  xml_parser.py
tool/autoPlatform/: autoPlatform.cfg  autoPlatform_gui.py  main.py  readme.txt
tool/autoTest/: autotest.cfg  readme.txt
tool/auto_run_ddr_test/: auto_run.py
tool/auto_uart/: autocmd.cfg  uart_auto_input.py
tool/backdoor_ddr/: 1.txt  backdoor  do_backdoor.c  make.sh  trng_mode1_0x81_64k_dword_loop20_ansi.txt
tool/build_release_tool/: TriggerTest.py  build.py  build_release.py  config.ini  download_tool.py  email_massage-old.txt  email_massage.txt  ftp.py  git_push_cp.py  kill_winproc.py  main.py  myrepo.py  release_version.py  release_zip.py  send_email.py  util.py  (+1 more)
(+555 files in other folders)
